attempt to fix .features alignment

--- a/styles/form.css
+++ b/styles/form.css
@@ -60,10 +60,10 @@ select, input[type="text"], input[type="date"], textarea {
     color: gold;
 }
 .features input {
-    margin-right: 5px;
+    margin-right: 2px;
 }
 .optional {
-    font-weight: normal;
+    font-size: 12px;
     color: blue;
 }
 .submit-button {
